cmake_minimum_required(VERSION 3.10)

project(zt1-engine)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG=1 -g3")

file(GLOB_RECURSE SRC src/*.cpp)

if (WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
    add_executable(${PROJECT_NAME} WIN32 ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/platform/windows/appicon.rc)
else()
    add_executable(${PROJECT_NAME} ${SRC})
endif()

set(BUILD_SHARED_LIBS OFF CACHE INTERNAL "" FORCE)

set(PE_BITMAP_LOADER OFF CACHE INTERNAL "Prevent pe-resource-loader from building the pe_bitmap_loader binary" FORCE)
set(PE_STRING_LOADER OFF CACHE INTERNAL "Prevent pe-resource-loader from building the pe_string_loader binary" FORCE)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vendor/pe-resource-loader)

set(SDL_SHARED OFF CACHE INTERNAL "" FORCE)
set(SDL_STATIC ON CACHE INTERNAL "" FORCE)
set(SDL_DISABLE_INSTALL ON CACHE INTERNAL "" FORCE)
set(SDL_DISABLE_INSTALL_DOCS ON CACHE INTERNAL "" FORCE)
set(SDL_TEST_LIBRARY OFF CACHE INTERNAL "" FORCE)
set(SDL_TESTS OFF CACHE INTERNAL "" FORCE)
set(SDL_EXAMPLES OFF CACHE INTERNAL "" FORCE)
add_subdirectory(vendor/SDL)

set(SDLIMAGE_INSTALL OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_SAMPLES OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_TESTS OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_ANI ON CACHE INTERNAL "" FORCE)
set(SDLIMAGE_AVIF OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_BMP ON CACHE INTERNAL "" FORCE)
set(SDLIMAGE_GIF OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_JPG OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_JXL OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_LBM OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_PCX OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_PNG OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_PNM OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_QOI OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_SVG OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_TGA ON CACHE INTERNAL "" FORCE)
set(SDLIMAGE_TIF OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_WEBP OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_XCF OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_XPM OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_XV OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_DEPS_SHARED OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_VENDORED ON CACHE INTERNAL "" FORCE)
set(SDLIMAGE_BACKEND_IMAGEIO OFF CACHE INTERNAL "" FORCE)
set(SDLIMAGE_BACKEND_STB OFF CACHE INTERNAL "" FORCE)
add_subdirectory(vendor/SDL_image)

set(SDLMIXER_INSTALL OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_DEPS_SHARED OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_VENDORED ON CACHE INTERNAL "" FORCE)
set(SDLMIXER_TESTS OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_EXAMPLES OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_AIFF OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_AU OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_VOC OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_FLAC OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_GME OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_OPUS OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_VORBIS_STB OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_VORBIS_VORBISFILE OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_VORBIS_TREMOR OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_MOD OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_WAVPACK OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_MIDI OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_MP3 OFF CACHE INTERNAL "" FORCE)
set(SDLMIXER_WAVE ON CACHE INTERNAL "" FORCE)
add_subdirectory(vendor/SDL_mixer)

set(SDLTTF_INSTALL OFF CACHE INTERNAL "" FORCE)
set(SDLTTF_VENDORED ON CACHE INTERNAL "" FORCE)
set(SDLTTF_SAMPLES OFF CACHE INTERNAL "" FORCE)
set(SDLTTF_FREETYPE ON CACHE INTERNAL "" FORCE)
set(SDLTTF_HARFBUZZ OFF CACHE INTERNAL "" FORCE)
set(SDLTTF_PLUTOSVG OFF CACHE INTERNAL "" FORCE)
add_subdirectory(vendor/SDL_ttf)

set(ENABLE_COMMONCRYPTO OFF CACHE INTERNAL "" FORCE)
set(ENABLE_GNUTLS OFF CACHE INTERNAL "" FORCE)
set(ENABLE_MBEDTLS OFF CACHE INTERNAL "" FORCE)
set(ENABLE_OPENSSL OFF CACHE INTERNAL "" FORCE)
set(ENABLE_WINDOWS_CRYPTO OFF CACHE INTERNAL "" FORCE)
set(ENABLE_FDOPEN OFF CACHE INTERNAL "" FORCE)
set(BUILD_TOOLS OFF CACHE INTERNAL "" FORCE)
set(BUILD_REGRESS OFF CACHE INTERNAL "" FORCE)
set(BUILD_OSSFUZZ OFF CACHE INTERNAL "" FORCE)
set(BUILD_EXAMPLES OFF CACHE INTERNAL "" FORCE)
set(BUILD_DOC OFF CACHE INTERNAL "" FORCE)
set(LIBZIP_DO_INSTALL OFF CACHE INTERNAL "" FORCE)
set(SHARED_LIB_VERSIONNING OFF CACHE INTERNAL "" FORCE)
set(ENABLE_BZIP2 OFF CACHE INTERNAL "" FORCE)
set(ENABLE_LZMA OFF CACHE INTERNAL "" FORCE)
set(ENABLE_ZSTD OFF CACHE INTERNAL "" FORCE)
add_subdirectory(vendor/libzip)

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/pe-resource-loader/include
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/SDL_image/include
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/SDL_ttf/include
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/SDL_mixer/include
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/libzip/include
)

target_link_libraries(${PROJECT_NAME} PRIVATE
    pe_resource_loader_static
    SDL3::SDL3-static
    SDL3_image::SDL3_image-static
    SDL3_ttf::SDL3_ttf-static
    SDL3_mixer::SDL3_mixer-static
    libzip::zip
)

if(WIN32)
    set(CMAKE_CXX_FLAGS "-static ${CMAKE_CXX_FLAGS}")
endif()

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_CURRENT_SOURCE_DIR}/font ${CMAKE_CURRENT_BINARY_DIR}/font)
